Fix link and Remove old 404 page version

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <a class="item" href="mailto:jackcooku@steveyi.net"> <i class="mail icon"></i>Email</a>
                 <a class="item" href="https://birthday.steveyi.net/"> 嘿！小易 18 歲了</a>
                 <a class="item" href="https://blog.steveyi.net/"> 酷小易 部落格</a>
-                <a class="item" href="https://lg.steveyi.net/"> SteveYi Network Service</a>
+                <a class="item" href="https://network.steveyi.net/"> SteveYi Network Service</a>
             </div>
         </div>
     </div>
