--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <a class="item" href="https://github.com/steveyiyo"> <i class="github icon"></i>GitHub</a>
                 <a class="item" href="https://twitter.com/steveyiyo"> <i class="twitter icon"></i>Twitter</a>
                 <a class="item" href="https://twitter.com/steveyiyo"> <i class="facebook icon"></i>FaceBook</a>
-                <a class="item" href="https://twitter.com/steveyiyo"> <i class="instagram icon"></i>Instagram</a>
+                <a class="item" href="https://instagram.com/steveyiyo"> <i class="instagram icon"></i>Instagram</a>
                 <a class="item" href="mailto:jackcooku@steveyi.net"> <i class="mail icon"></i>Email</a>
                 <a class="item" href="https://birthday.steveyi.net/"> 嘿！小易 18 歲了</a>
                 <a class="item" href="https://blog.steveyi.net/"> 酷小易 部落格</a>
